--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+
+ //bootstrap-import
+ @import "bootstrap-sprockets";
+ @import "bootstrap";
+
+
+
+
+
+ 
