--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,8 +2,16 @@
   <div class="container">
     <%= link_to "Sharing Portfolio", root_path, class:"header-logo" %>
     <ul class="nav navbar ">
+    <% if !current_user.nil? %>
+    <li><%= link_to current_user.name, user_path(current_user) %></li>
+    <li><%= link_to "作品一覧", "#" %></li>
+    <li><%= link_to "ストック一覧", "#" %></li>
+    <li><%= link_to "ログアウト", session_path(current_user), method: :delete %></li>
+    <% else %>
       <li><%= link_to "ログイン", new_session_path %></li>
       <li><%= link_to "新規作成", new_user_path %></li>
+    <% end %>
+      
     </ul>
   </div>
 </header>
