--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,17 +3,17 @@
 
 <%= form_with(model: @user, local: true) do |f| %>
   <%= render 'shared/error_messages', model: f.object %>
-  <%= f.label :ユーザー名 %>
-  <%= f.text_field :name, class: "" %>
+  <%= f.label :ユーザー名,  class:"col-sm-2 control-label" %>
+  <%= f.text_field :name, class: "form-control" %>
   
-  <%= f.label :メールアドレス %>
-  <%= f.email_field :email, class: "" %>
+  <%= f.label :メールアドレス, class:"col-sm-2 control-label" %>
+  <%= f.email_field :email, class: "form-control" %>
   
-  <%= f.label :パスワード %>
-  <%= f.text_field :password, class: "" %>
+  <%= f.label :パスワード, class:"col-sm-2 control-label" %>
+  <%= f.text_field :password, class: "form-control" %>
   
-  <%= f.label :パスワード確認用 %>
-  <%= f.text_field :password_confirmation, class: "" %>
+  <%= f.label :パスワード確認用, class:"col-sm-2 control-label" %>
+  <%= f.text_field :password_confirmation, class: "form-control" %>
 
   <%= f.submit "登録" %>
 <% end %>
