--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,1 +1,20 @@
 <h1>ユーザー編集画面</h1>
+
+<%= form_with(model: @user, local: true) do |f| %>
+  <%= render 'shared/error_messages', model: f.object %>
+  <%= f.label :ユーザー名,  class:"col-sm-2 control-label" %>
+  <%= f.text_field :name, class: "form-control" %>
+  
+  <%= f.label :メールアドレス, class:"col-sm-2 control-label" %>
+  <%= f.email_field :email, class: "form-control" %>
+  
+  <%= f.label :パスワード, class:"col-sm-2 control-label" %>
+  <%= f.text_field :password, class: "form-control" %>
+  
+  <%= f.label :パスワード確認用, class:"col-sm-2 control-label" %>
+  <%= f.text_field :password_confirmation, class: "form-control" %>
+  
+  <%= f.submit "保存" %>
+<% end %>
+  
+<%= link_to "アカウントを削除する", user_path(@user), method: :delete, data:{confirm:"本当に削除しますか？"} %>
