--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
 <h1>ユーザー詳細画面</h1>
-<%= @user.name %>
-<%= link_to "プロフィール編集", edit_user_path %>
+<h2><%= @user.name %></h2>
+<% if @user == current_user %>
+  <%= link_to "プロフィール編集", edit_user_path %>
+<% end %>
