--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,8 +4,8 @@
     <ul class="nav navbar ">
     <% if !current_user.nil? %>
       <li><%= link_to current_user.name, user_path(current_user) %></li>
-      <li><%= link_to "投稿する", "#" %></li>
-      <li><%= link_to "作品一覧", "#" %></li>
+      <li><%= link_to "投稿する", new_post_path %></li>
+      <li><%= link_to "作品一覧", posts_path %></li>
       <li><%= link_to "ストック一覧", "#" %></li>
       <li><%= link_to "ログアウト", session_path(current_user), method: :delete %></li>
     <% else %>
