--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,3 +3,7 @@
 <% if @user == current_user %>
   <%= link_to "プロフィール編集", edit_user_path %>
 <% end %>
+<div class="col-md-8">
+  <h3>投稿一覧</h3>
+  <%= render 'shared/feed' %>
+</div>
