add stock function

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,3 +6,5 @@
 <div>使用言語：<%= @post.language %></div>
 <div>開発期間：<%= @post.period %></div>
 <div>アピールポイント：<%= @post.point %></div>
+
+<%= render "shared/stock_form" %>
