add tag function

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -22,6 +22,10 @@
   <%= f.label :アピールポイント, class:"col-sm-2 control-label" %>
   <%= f.text_field :point, class: "form-control" %>
   
+  <%= f.label :タグ, class:"col-sm-2 control-label" %>
+  <%= f.text_field :tag_name, class: "form-control" %>
+
+  
   <%= f.submit "投稿する" %>
 <% end %>
 
