--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer>
+<footer class="footer">
   <div class="container">
     <ul class="nav navbar ">
       <li><%= link_to "サービス概要", "#" %></li>
