--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,19 @@
-<header>
+<header class="">
   <div class="container">
     <%= link_to "Sharing Portfolio", root_path, class:"header-logo" %>
-    <ul class="nav navbar ">
-    <% if !current_user.nil? %>
-      <li><%= link_to current_user.name, user_path(current_user) %></li>
-      <li><%= link_to "投稿する", new_post_path %></li>
-      <li><%= link_to "作品一覧", posts_path %></li>
-      <li><%= link_to "ストック一覧", stocks_path %></li>
-      <li><%= link_to "ログアウト", session_path(current_user), method: :delete %></li>
-    <% else %>
-      <li><%= link_to "ログイン", new_session_path %></li>
-      <li><%= link_to "新規作成", new_user_path %></li>
-    <% end %>
-      
-    </ul>
+      <nav>
+        <ul class="nav navbar-nav navbar-right">
+        <% if !current_user.nil? %>
+          <li><%= link_to current_user.name, user_path(current_user) %></li>
+          <li><%= link_to "投稿する", new_post_path %></li>
+          <li><%= link_to "作品一覧", posts_path %></li>
+          <li><%= link_to "ストック一覧", stocks_path %></li>
+          <li><%= link_to "ログアウト", session_path(current_user), method: :delete %></li>
+        <% else %>
+          <li><%= link_to "ログイン", new_session_path %></li>
+          <li><%= link_to "新規作成", new_user_path %></li>
+        <% end %>
+        </ul>
+      </nav>
   </div>
 </header>
