--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,5 +6,9 @@
 <div>使用言語：<%= @post.language %></div>
 <div>開発期間：<%= @post.period %></div>
 <div>アピールポイント：<%= @post.point %></div>
-
+<div>
+  <% @post.tags.each do |list| %>
+    <%= link_to list.tag_name, tag_posts_path(list.id) %>
+  <% end %>
+</div>
 <%= render "shared/stock_form" %>
