--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,5 +1,5 @@
 <% if @feed_items.any? %>
-  <ol class="microposts">
+  <ol class="list-group">
     <%= render partial:"shared/post",collection:@feed_items, as: :post %>
   </ol>
 <% end %>
