--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |key, value| %>
-  <p class="alert alert-<%= key %>">
+  <div class="alert alert-<%= key %>">
     <%= value %>
-  </p>
+  </div>
 <% end %>
