--- a/app/views/shared/_posts.html.erb
+++ b/app/views/shared/_posts.html.erb
@@ -1,6 +1,6 @@
+
 <% @posts.each do |post| %>
-<li>
-  <%= link_to post.name, post_path(post) %>
+<li class="list-group-item">
   <%= link_to post.name, post_path(post) %>
 </li>
 <% end %>
