--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -17,4 +17,4 @@
   <%= f.submit "保存" %>
 <% end %>
   
-<%= link_to "アカウントを削除する", user_path(@user), method: :delete, data:{confirm:"本当に削除しますか？"} %>
+<%= link_to "アカウントを削除する", user_path(@user), method: :delete, data:{confirm:"アカウントを削除した場合、全てのデータが失われます。本当に削除しますか？"} %>
