add search function

--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -1,8 +1,7 @@
+<h1>カテゴリ一覧</h1>
 <% @tag_list.each do |list| %>
   <%= link_to list.tag_name, tag_posts_path(post_tag_id: list.id) %>
   <%= list.posts.count %>
 <% end %>
 
-<% @posts.each do |post| %>
-  <%= link_to post.content, post %>
-<% end %>
+
