--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,4 +1,5 @@
 <h1>ストック一覧</h1>
+<h2>あなたがストックしたポートフォリオの一覧です。</h2>
 
 <% @stocks.each do |stock| %>
   <%= link_to stock.post.name, post_path(stock.post) %>
