--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,3 +11,19 @@
   <% end %>
 </div>
 <%= render "shared/stock_form" %>
+
+<div> </div>
+<%= form_with(model:[@post, @comment], method: :post) do |f| %>
+  <%= f.text_area :content %>
+  <%= f.hidden_field :post_id, value: @post.id %>
+  <%= f.submit "コメント送信", class: "btn-sm btn-primary" %>
+<% end %>
+
+<div>コメント</div>
+<ul class="list-group">
+  <% @comments.each do |comment| %>
+    <li class="list-group-item">
+      <%= link_to comment.user.name, user_path(comment.user) %>
+      <%= comment.content %>
+  <% end %>
+</ul>
