--- a/app/views/shared/_stock.html.erb
+++ b/app/views/shared/_stock.html.erb
@@ -1,4 +1,4 @@
 <%= form_with(url:stocks_path, local: true) do |f| %>
   <div><%= hidden_field_tag :post_id, @post.id %></div>
- <%= f.submit "ストック", class:"btn" %>
+ <%= f.submit "ストック", class:"btn-sm" %>
 <% end %>
