--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -23,7 +23,7 @@
     <%= f.label :アピールポイント, class:"col-sm-2 control-label" %>
     <%= f.text_field :point, class: "form-control" %>
 
-    <%= f.label :タグを追加する, class:"col-sm-2 control-label" %>
+    <%= f.label :タグ, class:"col-sm-2 control-label" %>
     <%= f.text_field :tag_ids, class: "form-control", value: @tag_list,\
     placeholder: "タグをつける。複数つけるには','で区切ってください。"  %>
     
@@ -31,5 +31,4 @@
     <% end %>
 
   </div>
-  <div>
 </div>
