--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -11,11 +11,11 @@
     <%= f.label :サービス概要, class:"col-sm-2 control-label" %>
     <%= f.text_field :content, class: "form-control" %>
     
-    <%= f.label :主な実装機能, class:"col-sm-2 control-label" %>
-    <%= f.text_field :function, class: "form-control" %>
+    <%= f.label :リンク, class:"col-sm-2 control-label" %>
+    <%= f.text_field :url, class: "form-control" %>
     
-    <%= f.label :使用言語, class:"col-sm-2 control-label" %>
-    <%= f.text_field :language, class: "form-control" %>
+    <%= f.label :サムネイル画像, class:"col-sm-2 control-label" %>
+    <%= f.file_field :image, class: "form-control" %>
 
     <%= f.label :開発期間, class:"col-sm-2 control-label" %>
     <%= f.text_field :period, class: "form-control" %>
