--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,2 +1,5 @@
-<h1>ホーム画面</h1>
+<div class="home-container">
+  <h1 class="homeh1">〜Sharing Portfolio〜</h1>
+  <h2 class="homeh2">作成したポートフォリオをみんなに公開しよう</h2>
+</div>
 
