--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,52 @@
 <h1><%= @post.name %></h1>
 <%= image_tag @post.image.url if @post.image? %>
-<div>サービスの概要：<%= @post.content %></div>
-<div>リンク：<%= @post.url %></div>
-<div>開発期間：<%= @post.period %></div>
-<div>アピールポイント：<%= @post.point %></div>
-<div>タグ：
-  <% @post.tags.each do |list| %>
-    <%= link_to list.tag_name, tag_path(list) %>
-  <% end %>
-</div>
+
+
+
+
+<form class="form-horizontal">
+	<div class="form-group">
+		<label class="col-sm-2 control-label">作成ユーザー：</label>
+		<div class="col-sm-10">
+			<p class="form-control-static"><%= link_to @post.user.name, user_path(@post.user) %></p>
+		</div>
+	</div>
+	<div class="form-group">
+		<label class="col-sm-2 control-label">サービスの概要：</label>
+		<div class="col-sm-10">
+			<p class="form-control-static"><%= @post.content %></p>
+		</div>
+	</div>
+	<div class="form-group">
+		<label class="col-sm-2 control-label">リンク：</label>
+		<div class="col-sm-10">
+			<p class="form-control-static"><%= @post.url %></p>
+		</div>
+	</div>
+	<div class="form-group">
+		<label class="col-sm-2 control-label">作成期間：</label>
+		<div class="col-sm-10">
+			<p class="form-control-static"><%= @post.period %></p>
+		</div>
+	</div>
+	<div class="form-group">
+		<label class="col-sm-2 control-label">アピールポイント：</label>
+		<div class="col-sm-10">
+			<p class="form-control-static"><%= @post.point %></p>
+		</div>
+	</div>
+	<div class="form-group">
+		<label class="col-sm-2 control-label">タグ：</label>
+		<div class="col-sm-10">
+      <p class="form-control-static">
+        <% @post.tags.each do |list| %>
+          <%= link_to list.tag_name, tag_path(list), class:"label label-primary" %>
+        <% end %>
+      </p>
+		</div>
+	</div>
+</form>
+
 <% if @post.user == current_user %>
   <div>
     <%= link_to "編集", edit_post_path(@post) %>
