--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>ユーザー編集画面</h1>
+<h1>プロフィール編集</h1>
+<h4>（自分のプロフィールを編集することができます。）</h4>
 
 <%= form_with(model: @user, local: true) do |f| %>
   <%= render 'shared/error_messages', model: f.object %>
