--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,20 +1,36 @@
 <h1>新規登録画面</h1>
+<h4>アカウントをお持ちでない方がユーザーの新規登録を行います。</h4>
 
-
-<%= form_with(model: @user, local: true) do |f| %>
+<%= form_with(model: @user, local: true, class:"form-horizontal") do |f| %>
   <%= render 'shared/error_messages', model: f.object %>
-  
-  <%= f.label :ユーザー名,  class:"col-sm-2 control-label" %>
-  <%= f.text_field :name, class: "form-control" %>
-  
-  <%= f.label :メールアドレス, class:"col-sm-2 control-label" %>
-  <%= f.email_field :email, class: "form-control" %>
-  
-  <%= f.label :パスワード, class:"col-sm-2 control-label" %>
-  <%= f.text_field :password, class: "form-control" %>
-  
-  <%= f.label :パスワード確認用, class:"col-sm-2 control-label" %>
-  <%= f.text_field :password_confirmation, class: "form-control" %>
 
-  <%= f.submit "登録" %>
+  <div class="form-group">
+    <%= f.label :ユーザー名：, class:"col-sm-2 control-label" %>
+		<div class="col-sm-10">
+      <%= f.text_field :name, class: "form-control", placeholder:"ユーザー名を入力してください。" %>	
+		</div>
+  </div>
+  
+  <div class="form-group">
+    <%= f.label :メールアドレス：, class:"col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.email_field :email, class: "form-control", placeholder:"メールアドレスを入力してください。" %>	
+    </div>
+	</div>
+  
+  <div class="form-group">
+    <%= f.label :パスワード：, class:"col-sm-2 control-label" %>
+		<div class="col-sm-10">
+      <%= f.text_field :password, class: "form-control", placeholder:"パスワードを入力してください。" %>	
+		</div>
+  </div>
+  
+  <div class="form-group">
+    <%= f.label :パスワード確認用：, class:"col-sm-2 control-label" %>
+		<div class="col-sm-10">
+      <%= f.text_field :password_confirmation, class: "form-control", placeholder:"確認用のパスワードを入力してください。" %>	
+		</div>
+  </div>
+
+  <%= f.submit "登録", class:"btn btn-primary btn-block" %>
 <% end %>
