--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,5 @@
-<h1><%= @user.name %></h1>
-<% if @user == current_user %>
-  <%= link_to "プロフィール編集", edit_user_path %>
-<% end %>
+<h1>マイページ</h1>
 <div class="col-md-8">
-  <h3>投稿一覧</h3>
+  <h4>投稿一覧</h4>
   <%= render 'shared/feed' %>
 </div>
