--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -51,7 +51,7 @@
     <%= f.label :タグ：, class:"col-sm-2 control-label" %>
     <div class="col-sm-10">
     <%= f.text_field :tag_ids, class: "form-control", id:'tag_ids',\
-    placeholder: "タグをつける。複数つけるには','で区切ってください。" %>
+    placeholder: "タグをつける。複数つけるには「全角スペース又は半角スペース」で区切ってください。" %>
     </div>
   </div>  
   
