--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
   </head>
   <body>
     <%= render "layouts/header" %>
-    <div class="container">
-      <%= render "shared/flash" %>
-      <%= yield %>
-      <%= render "layouts/footer" %>
-    </div>
+    <%= render "shared/flash" %>
+      <main>
+        <%= yield %>
+      </main>
+    <%= render "layouts/footer" %>
   </body>
 </html>
