--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,28 +1,28 @@
 <h1>ストック一覧</h1>
 <h4>あなたがストックしたポートフォリオの一覧です。</h4>
-
-
-<ul class="list-group">
+<ul class="flex flame">
   <% @stocks.each do |stock| %>
-  <li class="list-group-item">
-    <div class="thumbnail">
+  <li class="post-list flame">
+    <div class="post-image">
       <%= image_tag stock.post.image.url if stock.post.image? %>
-      <div class="caption">
-        <h3>
-          サービス名：<%= link_to stock.post.name, post_path(stock.post) %>
-        </h3>
-        <p>
-          作成ユーザー：<%= link_to stock.post.user.name, user_path(stock.post.user) %>
-        </p>
-        <p>タグ：
-          <% stock.post.tags.each do |list| %>
-              <%= link_to list.tag_name, tag_path(list), class:"label label-primary" %>
-          <% end %>
-        </p>
-        <p>
-          <%= time_ago_in_words(stock.post.created_at) %>前に投稿
-        </p>
-      </div>
+    </div>
+    <div class="post-caption">
+      <h3 class="post-title">
+        <%= link_to stock.post.name, post_path(stock.post) %>
+      </h3>
+      <p>
+        作成ユーザー：<%= link_to stock.post.user.name, user_path(stock.post.user) %>
+      </p>
+      <p>タグ：
+        <% stock.post.tags.each do |list| %>
+            <%= link_to list.tag_name, tag_path(list), class:"label label-primary" %>
+        <% end %>
+      </p>
+      <p class="post-content">サービス概要</p>
+        <p><%= stock.post.content %></p>
+      <p class="post-time">
+        <%= time_ago_in_words(stock.post.created_at) %>前に投稿
+      </p>
     </div>
   </li>
   <% end %>
