--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,5 +1,2 @@
 <h1><span class="label label-primary"><%= @tag.tag_name %></span>タグ</h1>
-
-<% @posts.each do |post| %>
-  <%= link_to post.name, post_path(post) %>
-<% end %>
+<%= render "shared/posts" %>
