--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
-  <div class="container">
-    <ul class="nav navbar ">
+  <div class="">
+    <ul class="">
       <li><%= link_to "サービス概要", "#" %></li>
       <li><%= link_to "お問い合わせ", "#" %></li>
       <li><%= link_to "利用規約", "#" %></li>
