--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,24 +1,22 @@
-<header class="">
+<header class="navbar navbar-fixed-top navbar-inverse">
   <div>
-    <nav class="navbar navbar-default">
+    <nav>
       <%= link_to "Sharing Portfolio", root_path, class:"logo" %>
       <ul class="nav navbar-nav navbar-right">
           <% if !current_user.nil? %>
-          こんにちは <%= current_user.name %> さん
-            <li><%= link_to "タグで探す", tags_path %></li>
-            <li><%= link_to "投稿する", new_post_path %></li>
-            <li><%= link_to "作品一覧", posts_path %></li>
-            <li><%= link_to "ストック一覧", stocks_path %></li>
+            <li class="header"><%= link_to "タグで探す", tags_path %></li>
+            <li class="header"><%= link_to "投稿する", new_post_path %></li>
+            <li class="header"><%= link_to "作品一覧", posts_path %></li>
+            <li class="header"><%= link_to "ストック一覧", stocks_path %></li>
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false"><%= current_user.name %> <span class="caret"></span>
               </a>
-              <ul class="dropdown-menu" role="menu">
+              <ul class="dropdown-menu">
                 <li><%= link_to "マイページ", user_path(current_user) %></li>
                 <li><%= link_to "プロフィール編集", edit_user_path(current_user) %></li>
                 <li><%= link_to "ログアウト", session_path(current_user), method: :delete %></li>
               </ul>
             </li>
-            
           <% else %>
             <li><%= link_to "ログイン", new_session_path %></li>
             <li><%= link_to "新規作成", new_user_path %></li>
