--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,34 +1,31 @@
 <h1><%= @post.name %></h1>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_with(model: @post, local: true) do |f| %>
-    <%= render "shared/error_messages", model: f.object %>
+<div class="sub flame">
+  <%= form_with(model: @post, local: true) do |f| %>
+  <%= render "shared/error_messages", model: f.object %>
 
-    <%= f.label :サービス名,  class:"col-sm-2 control-label" %>
-    <%= f.text_field :name, class: "form-control" %>
-    
-    <%= f.label :サービス概要, class:"col-sm-2 control-label" %>
-    <%= f.text_field :content, class: "form-control" %>
-    
-    <%= f.label :リンク, class:"col-sm-2 control-label" %>
-    <%= f.text_field :url, class: "form-control" %>
-    
-    <%= f.label :サムネイル画像, class:"col-sm-2 control-label" %>
-    <%= f.file_field :image, class: "form-control" %>
+  <%= f.label :サービス名,  class:"col-sm-2 control-label" %>
+  <%= f.text_field :name, class: "form-control" %>
+  
+  <%= f.label :サービス概要, class:"col-sm-2 control-label" %>
+  <%= f.text_area :content, class: "form-control" %>
+  
+  <%= f.label :リンク, class:"col-sm-2 control-label" %>
+  <%= f.text_field :url, class: "form-control" %>
+  
+  <%= f.label :サムネイル画像, class:"col-sm-2 control-label" %>
+  <%= f.file_field :image, class: "form-control" %>
 
-    <%= f.label :開発期間, class:"col-sm-2 control-label" %>
-    <%= f.text_field :period, class: "form-control" %>
-    
-    <%= f.label :アピールポイント, class:"col-sm-2 control-label" %>
-    <%= f.text_field :point, class: "form-control" %>
+  <%= f.label :開発期間, class:"col-sm-2 control-label" %>
+  <%= f.text_field :period, class: "form-control" %>
+  
+  <%= f.label :アピールポイント, class:"col-sm-2 control-label" %>
+  <%= f.text_area :point, class: "form-control" %>
 
-    <%= f.label :タグ, class:"col-sm-2 control-label" %>
-    <%= f.text_field :tag_ids, class: "form-control", value: @tag_list,\
-    placeholder: "タグをつける。複数つけるには','で区切ってください。"  %>
-    
-    <%= f.submit "更新する", class:"btn btn-primary" %>
-    <% end %>
-
-  </div>
+  <%= f.label :タグ, class:"col-sm-2 control-label" %>
+  <%= f.text_field :tag_ids, class: "form-control", value: @tag_list,\
+  placeholder: "タグをつける。複数つけるには','で区切ってください。"  %>
+  
+  <%= f.submit "更新する", class:"btn btn-primary btn-block" %>
+  <% end %>
 </div>
