--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -32,5 +32,12 @@
 		</div>
   </div>
 
+  <div class="form-group">
+    <%= f.label :プロフィール画像：, class:"form-control" %>
+    <div class="col-sm-10">
+      <%= f.file_field :user_image, class: "form-control", placeholder:"プロフィール画像を選択してください。（任意）" %>
+    </div>
+  </div>
+
   <%= f.submit "登録", class:"btn btn-primary btn-block" %>
 <% end %>
